# ChessMiniMax

./: .gitignore  CMakeLists.txt  Chess.cpp  Chess.h  Grid.cpp  README.md  board.py  chess.py  main.cpp  main.py  threads.py  utils.py
Relazione/: Relazione.tex
ai/: ai.py  move.py  node.py
board/: board.py  chess.py
pezzi/: Piece.cpp  Pieces.cpp
pieces/: Piece.cpp  Piece.h  Pieces  Pieces.cpp  Pieces.h  piece.py  pieces.py
pieces/Pieces.dSYM/Contents/: Info.plist
pieces/Pieces.dSYM/Contents/Resources/DWARF/: Pieces
